Fixed carousel bottom padding on mobile

--- a/kdp-frontend/src/styles/componentStyles/carousel/SpotifyCarousel.scss
+++ b/kdp-frontend/src/styles/componentStyles/carousel/SpotifyCarousel.scss
@@ -51,5 +51,6 @@
 @media only screen and (max-width: 1000px) {
   .spotify-iframe {
     width: 80%;
+    height: 13em;
   }
 }
